--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
     },
     "authors"    : [
         {
-            "name" : "Tianfeng Han",
-            "email": "mikan.tenny@gmail.com"
+            "name" : "ivan820819",
+            "email": "ivan820819@qq.com"
         }
     ],
     "minimum-stability": "dev"
